fix and added mobile screen + bonus. Exercise completed

--- a/css/style.css
+++ b/css/style.css
@@ -136,8 +136,6 @@ img {
 
 @media screen and (max-width:768px) {
 
-
-
     p {
         font-size: 1rem;
     }
@@ -154,8 +152,8 @@ img {
         font-size: 2rem;
     }
 
-    .col-left img {
-        height: 54%;
+    .steps .row {
+        align-items: center;
     }
 
     .steps .col img {
@@ -169,8 +167,72 @@ img {
     .steps .col:nth-of-type(3) h3 {
         padding-top: 20px;
     }
+
+
 }
 
+
+/*mobile*/
+@media screen and (max-width:480px) {
+
+    .lessons .col,
+    .container .col {
+        width: 100%;
+    }
+
+    .row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    p {
+        font-size: 1rem;
+        padding-bottom: 60px;
+    }
+
+    h3 {
+        font-size: 1.5rem;
+    }
+
+    h2 {
+        font-size: 1.8rem;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    .steps {
+        padding-bottom: 0;
+        margin: 0;
+    }
+
+    .steps .col img {
+        height: 200px;
+    }
+
+    .why-us {
+        background-color: #222222;
+        margin-bottom: 0;
+    }
+
+    .text-center {
+        padding-top: 50px;
+    }
+
+    .why-us li {
+        margin-bottom: 0;
+    }
+
+    li:first-child h3 {
+        padding-top: 80px;
+    }
+
+    /*bonus*/
+    body {
+        overflow-x: hidden;
+    }
+}
 
 /*bonus*/
 
